apps/academy/website/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: academy-website
spec:
  selector:
    app.kubernetes.io/name: academy-website
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
