apps/academy/website/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academy-website
spec:
  ingressClassName: nginx
  rules:
    - host: learn.hybridops.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academy-website
                port:
                  number: 80
